--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3",
+    "@number-flow/svelte": "^0.3.7",
     "@playwright/test": "^1.45.3",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-svelte-csf": "^5.0.0-next.0",
@@ -30,6 +31,7 @@
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
     "@vitest/browser": "^3.1.1",
     "@vitest/coverage-v8": "^3.1.1",
+    "motion": "^12.7.4",
     "playwright": "^1.51.1",
     "storybook": "^8.6.12",
     "svelte": "^5.0.0",
