--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@storybook/sveltekit": "^8.6.12",
     "@storybook/test": "^8.6.12",
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-cloudflare": "^7.0.1",
     "@sveltejs/enhanced-img": "^0.4.4",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
